--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
         <module>contacts-model</module>
     </modules>
 
+    <scm>
+        <connection>https://github.com/SZabirov/contacts_em.git</connection>
+    </scm>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -55,5 +59,20 @@
         </dependencies>
     </dependencyManagement>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <tagBase>https://github.com/SZabirov/contacts_em.git/tags</tagBase>
+                    <branchBase>https://github.com/SZabirov/contacts_em.git/branches</branchBase>
+                    <preparationGoals>clean</preparationGoals>
+                    <goals>install</goals>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
