--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,10 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <scm>
+        <connection>scm:git:https://github.com/SZabirov/contacts_em.git</connection>
+    </scm>
+
     <dependencyManagement>
         <dependencies>
             <!--Modules-->
@@ -53,5 +57,21 @@
 
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <tagBase>https://github.com/SZabirov/contacts.git/tags</tagBase>
+                    <branchBase>scm:git:https://github.com/SZabirov/contacts.git/branches</branchBase>
+                    <preparationGoals>clean</preparationGoals>
+                    <goals>install</goals>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
